# rust_ai_tdd_coder

./: .gitignore  Cargo.toml  README.md  tcr.sh  test_watch_tcr_command.txt
src/: assistant.rs  assistant_factory.rs  lib.rs  main.rs
src/ai/: ai_coder.rs  ai_commit_generator.rs  ai_provider.rs  code_writer.rs  commit_generator.rs  constant_commit_message.rs  mod.rs  open_ai_provider.rs
src/assistant/: assistant.rs  assistant_factory.rs  defined_assistant.rs  mod.rs  watch_lock.rs
src/commands/: TcrCommand.rs  command.rs  command_line.rs  command_line_parser.rs  commands.rs  commands_factory.rs  mod.rs  tcr_command.rs  watch_tcr_command.rs
src/commands/watch_events/: mod.rs
src/file_watching/: file_change_listener.rs  mod.rs
src/git/: git_version_control.rs  mod.rs  version_control.rs
src/test_runner/: cargo_test_provider.rs  mod.rs  test_provider.rs  test_results.rs
src/vcs/: git_version_control.rs  mod.rs  version_control.rs
tests/: acceptance_tests.rs
